k8s/node-server.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server-container
  template:
    metadata:
      labels:
        app: node-server-container
    spec:
      containers:
        - name: node-server
          image: junaidhome/node-server:latest
          ports:
            - containerPort: 8080
