k8s/react-client.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-client-container
  template:
    metadata:
      labels:
        app: react-client-container
    spec:
      containers:
        - name: react-client
          image: junaidhome/react-client:latest
          ports:
            - containerPort: 3000
