k8s/node-server.service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-server-service
spec:
  type: ClusterIP
  selector:
    app: node-server-container
  ports:
    - port: 8080
      targetPort: 8080
