k8s/postgres.service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-database-service
spec:
  type: ClusterIP
  selector:
    app: postgres-database-container
  ports:
    - port: 5432
      targetPort: 5432
