k8s/react-client.service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-client-service
spec:
  type: ClusterIP
  selector:
    app: react-client-container
  ports:
    - port: 3000
      targetPort: 3000
