k8s/ingress-controller.config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routes-config
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: react-client-service
                port:
                  number: 3000
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: node-server-service
                port:
                  number: 8080
